--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body id="gradient">
     <h1>Background Generator</h1>
+    <p>Click on a color picker below to choose either the left side (color 1) or the right side (color 2) of the background gradient.</p>
 
     <label for="color1">color 1</label>
     <input class="color1" type="color" name="color1" value="#00ff00">
